<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:shortcutDisabledMessage="@string/static_shortcut_disabled_message"
        android:shortcutId="static"
        android:shortcutLongLabel="@string/static_shortcut_long_label"
        android:shortcutShortLabel="@string/static_shortcut_short_label">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.example.admin.chatapp.AboutActivity"
            android:targetPackage="com.example.admin.chatapp" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:shortcutDisabledMessage="@string/static_shortcut_disabled_message_settings"
        android:shortcutId="settings"
        android:shortcutLongLabel="@string/static_shortcut_long_label_settings"
        android:shortcutShortLabel="@string/static_shortcut_short_label_settings">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.example.admin.chatapp.SettingsActivity"
            android:targetPackage="com.example.admin.chatapp" />
    </shortcut>
</shortcuts>
